# pea_cockpit

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  pyproject.toml
pages/: 1_analysis_dashboard.py  2_data_management.py  2_portfolio.py
src/: analysis.py  charts.py  database.py  fetcher.py  portfolio.py
src/pea_cockpit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
